# rSpotify

./: .env.example  .gitattributes  .gitignore  COURSE_CORRECTION_SUMMARY.md  DEPLOYMENT_FIXES.md  DEPLOYMENT_FIX_NOTES.md  DEPLOYMENT_NOTES.md  IMPLEMENTATION_GUIDE.md  QUICK_START_CHECKLIST.md  README.md  SPRINT_CHANGE_PROPOSAL.md  SPRINT_CHANGE_SUMMARY.md  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  rspotify.py  rspotify_test.py
.github/workflows/: develop.yml  main.yml
ansible/: production_inventory  production_inventory.example  setup.yml  staging_inventory.example
ansible/templates/: env.j2  logrotate.j2  nginx.conf.j2  supervisor.conf.j2
docs/: PRIVACY_POLICY.md  rules.md  secrets.md
docs/corrections/: branching-strategy.md  oauth-implementation.md
docs/deployment/: QUICKSTART.md  github-secrets-setup.md  initial-deployment.md  rollback-guide.md  troubleshooting.md
docs/stories/: 1.1.project-initialization-core-bot-setup.md  1.2.owner-only-command-notification-framework.md  1.3.secure-user-data-storage.md  1.6.deployment-operationalization-documentation.md
rspotify_bot/: bot.py  config.py
rspotify_bot/handlers/: owner_commands.py  user_commands.py
rspotify_bot/services/: auth.py  database.py  encryption.py  middleware.py  notifications.py  repository.py  validation.py
scripts/: debug-oauth.sh  deploy-test.sh  deploy.sh  setup-oauth-domain.sh
tests/: conftest.py
tests/integration/: test_database_integration.py  test_oauth_integration.py  test_onboarding_flow.py  test_owner_auth.py  test_spotify_profile_integration.py
tests/unit/: test_auth.py  test_bot.py  test_bot_oauth.py  test_config.py  test_encryption.py  test_oauth.py  test_owner_commands.py  test_repository.py  test_story_1_2_functionality.py  test_user_profile_commands.py  test_validation.py
tests/unit/handlers/: test_onboarding_help.py
tests/unit/services/: test_encryption.py
web_apps/betterthanvery/: bot.py
web_apps/perfectcircle/: bot.py
web_callback/: README.md  app.py  app_flask_backup.py  app_old.py
